# operato

./: Engine_keywords_implementation_status.txt  README.md  Starter_keywords_implementation_status.txt  constants.py  engine.py  pyproject.toml  requirements.txt  setup.py  starter.py  tester.py
keywords/: common.py  starter.py
keywords/_engine/: batch_000.py  batch_001.py  batch_002.py  batch_003.py  batch_005.py  batch_007.py  batch_008.py  batch_010.py  batch_011.py  batch_012.py  batch_013.py  batch_014.py  batch_015.py  batch_016.py  batch_017.py  batch_020.py  batch_021.py  batch_023.py  batch_024.py  batch_025.py
keywords/_starter/: batch_002.py  batch_003.py  batch_005.py  batch_012.py  batch_014.py  batch_015.py  batch_016.py  batch_018.py  batch_019.py  batch_021.py  batch_023.py  batch_024.py  batch_025.py  batch_026.py  batch_027.py  batch_028.py  batch_032.py  batch_035.py  batch_038.py  batch_039.py  batch_040.py  batch_041.py  batch_042.py  batch_043.py  batch_045.py  batch_046.py  batch_047.py  batch_049.py  batch_050.py  batch_051.py  batch_052.py  batch_053.py  batch_054.py  batch_055.py  batch_056.py  batch_057.py  batch_058.py  batch_059.py
operato/: constants.py  starter.py
operato.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
operato/keywords/: common.py  engine.py  starter.py
operato/keywords/_engine/: batch_000.py  batch_001.py  batch_002.py  batch_003.py  batch_004.py  batch_005.py  batch_006.py  batch_007.py  batch_008.py  (+17 more)
operato_PRW.egg-info/: PKG-INFO  SOURCES.txt
tests/: testmodule.py
utils/: checks_implementation_status.py
(+60 files in other folders)
